build/00009/H4P_SunriseSunset_nodemcuv2.log
Processing nodemcuv2 (platform: espressif8266@4.2.0; board: nodemcuv2; framework: arduino)
--------------------------------------------------------------------------------
Tool Manager: Installing platformio/tool-esptoolpy @ ~1.30000.0
Unpacking 0% 10% 20% 30% 40% 50% 60% 70% 80% 90% 100%
Tool Manager: tool-esptoolpy@1.30000.201119 has been installed!
Verbose mode can be enabled via `-v, --verbose` option
CONFIGURATION: https://docs.platformio.org/page/boards/espressif8266/nodemcuv2.html
PLATFORM: Espressif 8266 (4.2.0) > NodeMCU 1.0 (ESP-12E Module)
HARDWARE: ESP8266 80MHz, 80KB RAM, 4MB Flash
PACKAGES: 
 - framework-arduinoespressif8266 @ 3.30102.0 (3.1.2) 
 - tool-esptool @ 1.413.0 (4.13) 
 - tool-esptoolpy @ 1.30000.201119 (3.0.0) 
 - toolchain-xtensa @ 2.100300.220621 (10.3.0)
Converting H4P_SunriseSunset.ino
LDF: Library Dependency Finder -> https://bit.ly/configure-pio-ldf
LDF Modes: Finder ~ deep+, Compatibility ~ soft
Found 45 compatible libraries
Scanning dependencies...
Dependency Graph
|-- H4 @ 4.0.9+sha.6f2f510
|-- H4Tools @ 0.0.16+sha.47ce091
|-- H4AsyncTCP @ 0.0.25+sha.231be9d
|-- H4AsyncMQTT @ 1.0.0-rc12+sha.9d2b784
|-- ArmadilloHTTP @ 0.1.9+sha.ac5bf86
|-- H4AsyncWebServer @ 0.0.13+sha.fcbce26
|-- H4Plugins @ 3.5.7+sha.0ad6c2a
|-- ESPAsyncUDP @ 0.0.0-alpha+sha.697c75a025
|-- LittleFS @ 0.1.0
|-- ESP8266WiFi @ 1.0
|-- ESP8266mDNS @ 1.2
|-- DNSServer @ 1.1.1
|-- ArduinoOTA @ 1.0
|-- ESP8266httpUpdate @ 1.3
|-- ESP8266HTTPClient @ 1.2
Building in release mode
Compiling .pio/build/nodemcuv2/src/H4P_SunriseSunset.ino.cpp.o
In file included from /home/runner/work/h4plugins/h4plugins/build/nodemcuv2/src/H4P_SunriseSunset.ino:1:
.pio/libdeps/nodemcuv2/H4Plugins/src/H4Plugins.h:6:76: note: '#pragma message: Using Wifi AP - Make sure you have made arrangements!'
    6 |     #pragma message("Using Wifi AP - Make sure you have made arrangements!")
      |                                                                            ^
/home/runner/work/h4plugins/h4plugins/build/nodemcuv2/src/H4P_SunriseSunset.ino: In function 'void onRTC()':
/home/runner/work/h4plugins/h4plugins/build/nodemcuv2/src/H4P_SunriseSunset.ino:5:3: error: 'h4ss' was not declared in this scope
    5 |   h4ss.at(SUNRISE,OFF,[](bool b){ Serial.printf("COCK-A-DOODLE-DOO!"); });
      |   ^~~~
/home/runner/work/h4plugins/h4plugins/build/nodemcuv2/src/H4P_SunriseSunset.ino:5:11: error: 'SUNRISE' was not declared in this scope; did you mean 'SPISE'?
    5 |   h4ss.at(SUNRISE,OFF,[](bool b){ Serial.printf("COCK-A-DOODLE-DOO!"); });
      |           ^~~~~~~
      |           SPISE
/home/runner/work/h4plugins/h4plugins/build/nodemcuv2/src/H4P_SunriseSunset.ino:6:17: error: 'SUNSET' was not declared in this scope; did you mean 'SYN_SENT'?
    6 |   h4ss.atSource(SUNSET,ON); // BinarySwitch on @ sunset
      |                 ^~~~~~
      |                 SYN_SENT
/home/runner/work/h4plugins/h4plugins/build/nodemcuv2/src/H4P_SunriseSunset.ino: At global scope:
/home/runner/work/h4plugins/h4plugins/build/nodemcuv2/src/H4P_SunriseSunset.ino:10:38: error: no matching function for call to 'H4P_WiFi::H4P_WiFi(const char [9], const char [9])'
   10 | H4P_WiFi h4wifi("XXXXXXXX","XXXXXXXX"); // device defaults to "H4-<chip id>"
      |                                      ^
In file included from .pio/libdeps/nodemcuv2/H4Plugins/src/H4P_AsyncMQTT.h:34,
                 from .pio/libdeps/nodemcuv2/H4Plugins/src/H4Plugins.h:10,
                 from /home/runner/work/h4plugins/h4plugins/build/nodemcuv2/src/H4P_SunriseSunset.ino:1:
.pio/libdeps/nodemcuv2/H4Plugins/src/H4P_WiFi.h:133:9: note: candidate: 'H4P_WiFi::H4P_WiFi(const string&)'
  133 |         H4P_WiFi(const std::string& device=""):
      |         ^~~~~~~~
.pio/libdeps/nodemcuv2/H4Plugins/src/H4P_WiFi.h:133:9: note:   candidate expects 1 argument, 2 provided
In file included from .pio/libdeps/nodemcuv2/H4Plugins/src/H4P_AsyncMQTT.h:34,
                 from .pio/libdeps/nodemcuv2/H4Plugins/src/H4Plugins.h:10,
                 from /home/runner/work/h4plugins/h4plugins/build/nodemcuv2/src/H4P_SunriseSunset.ino:1:
.pio/libdeps/nodemcuv2/H4Plugins/src/H4P_WiFi.h:63:7: note: candidate: 'H4P_WiFi::H4P_WiFi(const H4P_WiFi&)'
   63 | class H4P_WiFi: public H4Service, public H4AsyncWebServer {
      |       ^~~~~~~~
.pio/libdeps/nodemcuv2/H4Plugins/src/H4P_WiFi.h:63:7: note:   candidate expects 1 argument, 2 provided
.pio/libdeps/nodemcuv2/H4Plugins/src/H4P_WiFi.h:63:7: note: candidate: 'H4P_WiFi::H4P_WiFi(H4P_WiFi&&)'
.pio/libdeps/nodemcuv2/H4Plugins/src/H4P_WiFi.h:63:7: note:   candidate expects 1 argument, 2 provided
/home/runner/work/h4plugins/h4plugins/build/nodemcuv2/src/H4P_SunriseSunset.ino:12:1: error: 'H4P_Sunrise' does not name a type
   12 | H4P_Sunrise h4ss("48.4738943","-0.6029038"); // My French heaven
      | ^~~~~~~~~~~
/home/runner/work/h4plugins/h4plugins/build/nodemcuv2/src/H4P_SunriseSunset.ino:13:47: error: no matching function for call to 'H4P_AsyncMQTT::H4P_AsyncMQTT(const char [24])'
   13 | H4P_AsyncMQTT h4mqtt("http://192.168.1.4:1883");
      |                                               ^
In file included from .pio/libdeps/nodemcuv2/H4Plugins/src/H4Plugins.h:10,
                 from /home/runner/work/h4plugins/h4plugins/build/nodemcuv2/src/H4P_SunriseSunset.ino:1:
.pio/libdeps/nodemcuv2/H4Plugins/src/H4P_AsyncMQTT.h:71:9: note: candidate: 'H4P_AsyncMQTT::H4P_AsyncMQTT(H4P_LWT)'
   71 |         H4P_AsyncMQTT(H4P_LWT lwt={"","",0,false}): _lwt(lwt), H4Service(mqttTag(),H4PE_GVCHANGE|H4PE_VIEWERS|H4PE_BLESINIT){
      |         ^~~~~~~~~~~~~
.pio/libdeps/nodemcuv2/H4Plugins/src/H4P_AsyncMQTT.h:71:31: note:   no known conversion for argument 1 from 'const char [24]' to 'H4P_LWT'
   71 |         H4P_AsyncMQTT(H4P_LWT lwt={"","",0,false}): _lwt(lwt), H4Service(mqttTag(),H4PE_GVCHANGE|H4PE_VIEWERS|H4PE_BLESINIT){
      |                       ~~~~~~~~^~~~~~~~~~~~~~~~~~~
.pio/libdeps/nodemcuv2/H4Plugins/src/H4P_AsyncMQTT.h:46:7: note: candidate: 'H4P_AsyncMQTT::H4P_AsyncMQTT(const H4P_AsyncMQTT&)'
   46 | class H4P_AsyncMQTT: public H4Service, public H4AsyncMQTT{
      |       ^~~~~~~~~~~~~
.pio/libdeps/nodemcuv2/H4Plugins/src/H4P_AsyncMQTT.h:46:7: note:   no known conversion for argument 1 from 'const char [24]' to 'const H4P_AsyncMQTT&'
.pio/libdeps/nodemcuv2/H4Plugins/src/H4P_AsyncMQTT.h:46:7: note: candidate: 'H4P_AsyncMQTT::H4P_AsyncMQTT(H4P_AsyncMQTT&&)'
.pio/libdeps/nodemcuv2/H4Plugins/src/H4P_AsyncMQTT.h:46:7: note:   no known conversion for argument 1 from 'const char [24]' to 'H4P_AsyncMQTT&&'
/home/runner/work/h4plugins/h4plugins/build/nodemcuv2/src/H4P_SunriseSunset.ino:14:25: error: 'RELAY_BUILTIN' was not declared in this scope; did you mean 'LED_BUILTIN'?
   14 | H4P_BinarySwitch h4onof(RELAY_BUILTIN,ACTIVE_HIGH,OFF);
      |                         ^~~~~~~~~~~~~
      |                         LED_BUILTIN
*** [.pio/build/nodemcuv2/src/H4P_SunriseSunset.ino.cpp.o] Error 1
========================== [FAILED] Took 4.36 seconds ==========================
Environment    Status    Duration
-------------  --------  ------------
nodemcuv2      FAILED    00:00:04.360
==================== 1 failed, 0 succeeded in 00:00:04.360 ====================